# opengl-quickstart

./: .gitignore  CMakeLists.txt  Camera.h  EBO.cpp  EBO.h  GameObject.h  GameState.h  LICENSE  Light.h  Mesh.cpp  Mesh.h  README.md  Resources.cpp  Resources.h  Timer.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  animation.h  camera.cpp  camera.h  default.frag  default.vert  gameObject.cpp  gameObject.h  glad.c  main.cpp  point.cpp  point.frag  point.h  point.vert  run.sh  shaderClass.cpp  shaderClass.h  texture.cpp  texture.h
Libraries/include/glad/: glad.h
Libraries/lib_linux/lib/: libSDL3_image.so.0.5.0
Libraries/lib_win/lib/: glm.lib
